--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- css -->
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
     <!-- cursor -->
